[package]
name = "chmap-perf"
version = "0.1.0"
edition = "2024"

[dependencies]
chmap = { version = "0.1.0", path = "../chmap" }
clap = { version = "4.5.59", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
color-eyre = "0.6.5"
dbuf = { version = "0.1.0", path = "../dbuf" }
eyre = "0.6.12"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
