[package]
name = "dbuf"
version = "0.1.0"
edition = "2021"

[features]

default = ["std", "triomphe"]

std = ["alloc", "dep:atomic-waker"]
alloc = ["dep:rc-box"]
triomphe = ["dep:triomphe"]

[dependencies]

[dependencies.rc-box]
optional = true
version = "1"
default-features = false

[dependencies.triomphe]
optional = true
version = "0.1.11"
default-features = false

[dependencies.atomic-waker]
version = "1"
default-features = false
optional = true

[dev-dependencies.pollster]
version = "0.3"
features = ["macro"]

