[package]
name = "dbuf"
version = "0.1.0"
edition = "2021"

[features]

default = ["std", "triomphe"]

std = ["alloc"]
alloc = ["dep:rc-box"]
triomphe = ["dep:triomphe"]

[dependencies]
sync_wrapper = "1"
crossbeam-utils = { version = "0.8.20", default-features = false }

[dependencies.rc-box]
optional = true
version = "1"
default-features = false

[dependencies.triomphe]
optional = true
version = "0.1.11"
default-features = false

[target."cfg(loom)".dependencies.loom]
version = "0.7"
features = ["checkpoint"]

[dev-dependencies.pollster]
version = "0.3"
features = ["macro"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(loom)'] }

